	- Fixed crop() method so that it is consistent with documentation.
        - make clean now removes the testout directory
	- added tests for the OO interface for tiff, added an option to
	  choose the resolution for fax tiffs, removed some unused code,
	  fixed minor problems with Imager::write() handling of image types
        - changed README note on libgif bug to refer to t105gif.t instead
	  of t10formats.t

0.39  pre1
	- split Imager::Font into a base, *::Type1 and *::Truetype
        - writing faxable tiff now allows 2 and 4 channel images
        - virtual image interface - 8-bit/sample images
        - paletted images
        - 16-bit/sample images
        - masked images
        - writing non-8bit images to raw
        - writing   ''       ''   to tiff
        - i_convert support for high-bit images and paletted images
        - i_copy for high-bit and paletted images
        - tests for rubthru
        - rubthru can now rub a 2 channel image over a 1 or 3 channel 
          image
        - rubthru for high-bit images
        - i_readgif_multi functions, which return all the frames from a
          GIF file, along with a bunch of meta-information as tag
        - OO interface to tags
        - OO interface read_multi() to read multi-image files (just GIF
          so far)
        - documentation for the multi-image GIF reading and tags
        - rotate() method with rotate by steps of 90 degrees (and docs)
        - fixed a bug in i_img_pal_new_low()
        - added gaussian to the filters list
        - documented the individual filters
	- fixed the right-hand side of bounding boxes for TT fonts 
	  where the last character overlaps the advance width (eg. 
	  italic fonts)

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
